# rg-be-gone

./: .gitignore  Cargo.toml  gdbinit
.cargo/: config
src/: esp.rs  main.rs
